--- a/package.json
+++ b/package.json
@@ -26,10 +26,12 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
+    "axios": "^0.19.2",
     "electron-is-dev": "^1.2.0",
     "electron-reload": "^1.5.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-grid-layout": "^0.18.3",
     "react-scripts": "3.4.1",
     "typescript": "~3.7.2"
   },
@@ -58,9 +60,11 @@
     ]
   },
   "devDependencies": {
+    "@types/react-grid-layout": "^0.17.2",
     "concurrently": "^5.2.0",
     "electron": "^9.1.0",
     "electron-builder": "^22.7.0",
+    "node-sass": "^4.14.1",
     "wait-on": "^5.1.0"
   }
 }
