--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "axios": "^0.19.2",
     "electron-is-dev": "^1.2.0",
     "electron-reload": "^1.5.0",
+    "electron-store": "5.2.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-grid-layout": "^0.18.3",
