--- a/electron/tsconfig.json
+++ b/electron/tsconfig.json
@@ -7,6 +7,7 @@
     "outDir": "../build",
     "rootDir": "../",
     "noEmitOnError": true,
-    "typeRoots": ["node_modules/@types"]
+    "typeRoots": ["node_modules/@types"],
+    "allowJs": true
   }
 }
