--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "electron:dev": "concurrently \"yarn proxy\" \"yarn start\" \"wait-on http://localhost:3000 && tsc -p electron -w\" \"wait-on http://localhost:3000 && tsc -p electron && electron --inspect=5858 .\"",
     "electron:build": "yarn build && tsc -p electron && electron-builder",
     "start": "cross-env BROWSER=NONE REACT_APP_DEVAPISERVER=http://localhost:8080 react-scripts start",
-    "build": "react-scripts build",
+    "build": "cross-env GENERATE_SOURCEMAP=false react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "proxy": "node proxy.js"
